<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/settings_label_difficulty_easy"
        android:summary="@string/settings_label_num_family"
        android:key="@string/pref_num_family_easy_key"
        android:defaultValue="@string/pref_num_family_easy_default"
        android:entries="@array/pref_num_family_options"
        android:entryValues="@array/pref_num_family_values" />

    <ListPreference
        android:title="@string/settings_label_difficulty_normal"
        android:summary="@string/settings_label_num_family"
        android:key="@string/pref_num_family_normal_key"
        android:defaultValue="@string/pref_num_family_normal_default"
        android:entries="@array/pref_num_family_options"
        android:entryValues="@array/pref_num_family_values" />

    <ListPreference
        android:title="@string/settings_label_difficulty_hard"
        android:summary="@string/settings_label_num_family"
        android:key="@string/pref_num_family_hard_key"
        android:defaultValue="@string/pref_num_family_hard_default"
        android:entries="@array/pref_num_family_options"
        android:entryValues="@array/pref_num_family_values" />

</PreferenceScreen>