<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start_easy_game"
        android:id="@+id/btn_new_easy_game"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startEasyGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start_normal_game"
        android:id="@+id/btn_new_normal_game"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startNormalGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start_hard_game"
        android:id="@+id/btn_new_hard_game"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startHardGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_start_custom_game"
        android:id="@+id/btn_new_custom_game"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startCustomGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_find_game"
        android:id="@+id/btn_game_unfinished"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="findGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:id="@+id/btn_overview_settings"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="goToSettings"/>

</LinearLayout>
